--- a/MaquetteHTML/accueil_nonconnecte.html
+++ b/MaquetteHTML/accueil_nonconnecte.html
@@ -9,10 +9,10 @@ and open the template in the editor.
         <title>TODO supply a title</title>
         <meta charset="windows-1252">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/style_accueil_nonconnecte.css">
     </head>
     <body>
-        <div></div>
-        <div></div>
+        <div id="logo_accueil"><img src="images/logo.png" height="200" width="200"/></div>
+        <div id="partie_centrale"><img id="img_barre" src="images/barre_verticale_accueil.png"/></div>
     </body>
 </html>
