Ajout page accueil connecté

--- a/MaquetteHTML/accueil_connecte.html
+++ b/MaquetteHTML/accueil_connecte.html
@@ -28,7 +28,7 @@ and open the template in the editor.
             <table id="tableau_accueil">
                 <tr>
                     <td>
-                        <h2>NOTRE SITE</h2>
+                        <h2>CREEZ</h2>
                     </td>
                     <td>
                         <h2>REJOIGNEZ</h2>
@@ -36,17 +36,23 @@ and open the template in the editor.
                 </tr>
                 <tr>
                     <td>
-                        <p class="p_info">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse tincidunt ligula id justo dapibus, sed lobortis mauris egestas. Nunc elementum pharetra molestie. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur ac ullamcorper tortor. In imperdiet vel lectus ac elementum. Sed luctus molestie lacus non aliquet. Curabitur pulvinar felis in vestibulum tincidunt. Cras pellentesque convallis libero, nec malesuada leo tincidunt quis. Donec tempor ante ut accumsan imperdiet. Duis maximus augue id neque aliquet, sit amet viverra dui varius. Quisque auctor imperdiet mi, sed molestie neque dictum quis. Mauris nec fringilla mauris. Suspendisse potenti. Mauris ac sapien placerat, placerat arcu quis, gravida enim. Aliquam dapibus velit mollis, facilisis ligula vel, convallis dui.
-                        </p>
+                        <form class="formulaire_accueil">
+                            <label><b>ID : </b></label>
+                            <input type="text" name="id-creer" value="1458" readonly="readonly"/>
+                            <br/><br/>
+                            <label><b>Mot de passe : </b></label>
+                            <input type="password" name="password-creer"/>
+                            <br/><br/>
+                            <input type="submit"/>
+                        </form>
                     </td>    
                     <td>
                         <form class="formulaire_accueil">
                             <label><b>ID : </b></label>
-                            <input type="text" name="id"/>
+                            <input type="text" name="id-rejoindre"/>
                             <br/><br/>
                             <label><b>Mot de passe : </b></label>
-                            <input type="password" name="password"/>
+                            <input type="password" name="password-rejoindre"/>
                             <br/><br/>
                             <input type="submit"/>
                         </form>
