Mise à jour des liens

--- a/MaquetteHTML/accueil_nonconnecte.html
+++ b/MaquetteHTML/accueil_nonconnecte.html
@@ -47,7 +47,7 @@ and open the template in the editor.
                         </p>
                     </td>    
                     <td>
-                        <form class="formulaire_accueil">
+                        <form class="formulaire_accueil" action="chat_nonconnecte.html">
                             <label><b>ID : </b></label>
                             <input type="text" name="id"/>
                             <br/><br/>
