Mise à jour des liens

--- a/MaquetteHTML/accueil_connecte.html
+++ b/MaquetteHTML/accueil_connecte.html
@@ -25,6 +25,10 @@ and open the template in the editor.
         
         <div id="menu">
             <a href=""><i class="fa fa-user-circle fa-3x" aria-hidden="true"></i></a>
+            &nbsp;
+            &nbsp;
+            &nbsp;
+            <a href="accueil_nonconnecte.html"><i class="fa fa-sign-out fa-3x" aria-hidden="true"></i></a>
         </div>
         
         <div id="partie_centrale">
