Salut, je commit

--- a/MaquetteHTML/chat_admin.html
+++ b/MaquetteHTML/chat_admin.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/style_chat_nonconnecte.css" />
+        <link rel="stylesheet" href="css/style_chat_admin.css" />
         <link rel="icon" type="image/png" href="images/favicon.png" />       
     
     </head>
@@ -43,18 +43,22 @@
         <section id="section">
             <div class="row">
                 <div class="col-md-4 camera">
+                    <span class="banCross"><i class="fa fa-times"></i></span>
+                    <img alt="camera 1" src="images/avatar.png">
+                    <div class="volume">
+                        <input type="range" min="0" max="100" value="50"/>
+                    </div>
+                </div>
+                <div class="col-md-4 camera">            
+                    <span class="banCross"><i class="fa fa-times"></i></span>
+                    <span class="promoteIcon"><i class="fa fa-flag"></i></span>
                     <img alt="camera 1" src="images/avatar.png">
                     <div class="volume">
                         <input type="range" min="0" max="100" value="50"/>
                     </div>
                 </div>
                 <div class="col-md-4 camera">
-                    <img alt="camera 1" src="images/avatar.png">
-                    <div class="volume">
-                        <input type="range" min="0" max="100" value="50"/>
-                    </div>
-                </div>
-                <div class="col-md-4 camera">
+                    <span class="banCross"><i class="fa fa-times"></i></span>
                     <img alt="camera 1" src="images/avatar.png">
                     <div class="volume">
                         <input type="range" min="0" max="100" value="50"/>
@@ -62,12 +66,15 @@
                 </div>
                 <div class="w-100"></div>
                 <div class="col-md-6 camera">
+                    <span class="banCross"><i class="fa fa-times"></i></span>
+                    <span class="promoteIcon"><i class="fa fa-flag"></i></span>
                     <img alt="camera 1" src="images/avatar.png">
                     <div class="volume">
                         <input type="range" min="0" max="100" value="50"/>
                     </div>
                 </div>
                 <div class="col-md-6 camera">
+                    <span class="banCross"><i class="fa fa-times"></i></span>
                     <img alt="camera 1" src="images/avatar.png">
                     <div class="volume">
                         <input type="range" min="0" max="100" value="50"/>
