Salut, je commit encore !

--- a/MaquetteHTML/chat_admin.html
+++ b/MaquetteHTML/chat_admin.html
@@ -8,7 +8,6 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style_chat_admin.css" />
         <link rel="icon" type="image/png" href="images/favicon.png" />       
-    
     </head>
     <body>
         <aside id="aside">
@@ -18,8 +17,8 @@
             <ul id="listeParticipants">
                 <li>Claude</li>
                 <li>Luc</li>
-                <li>
-                    <span id="admin">Geneviève</span>
+                <li id="admin">
+                    <span id="user">Geneviève</span>
                 </li>
                 <li>Capucine</li>
                 <li>Francis</li>
