--- a/MaquetteHTML/chat_nonconnecte.html
+++ b/MaquetteHTML/chat_nonconnecte.html
@@ -8,7 +8,6 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style_chat_nonconnecte.css" />
         <link rel="icon" type="image/png" href="images/favicon.png" />       
-    
     </head>
     <body>
         <aside id="aside">
@@ -22,7 +21,7 @@
                     <span id="admin">Geneviève</span>
                 </li>
                 <li>Capucine</li>
-                <li>Francis</li>
+                <li id="user">Francis</li>
             </ul>
             
             <div class="type-1">
