--- a/MaquetteHTML/accueil_nonconnecte.html
+++ b/MaquetteHTML/accueil_nonconnecte.html
@@ -6,15 +6,15 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Accueil - Skype</title>
+        <title>SeeU</title>
         <meta charset="windows-1252">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <script src="js/jquery-3.2.1.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 	<script src="bootstrap/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <script src="js/script.js" type="text/javascript"></script> 
+        <link rel="stylesheet" type="text/css" href="css/style_pop-up.css">
+        <script src="js/script_pop-up.js" type="text/javascript"></script> 
 
 
          <link rel="stylesheet" type="text/css" href="css/style_accueil_nonconnecte.css">
