--- a/MaquetteHTML/chat_admin.html
+++ b/MaquetteHTML/chat_admin.html
@@ -7,7 +7,9 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style_chat_admin.css" />
-        <link rel="icon" type="image/png" href="images/favicon.png" />       
+        <link rel="stylesheet" href="css/style_pop-up.css" />
+        <link rel="icon" type="image/png" href="images/favicon.png" />   
+        <script src="js/script_pop-up.js" type="text/javascript"></script> 
     </head>
     <body>
         <aside id="aside">
@@ -81,5 +83,19 @@
                 </div>
             </div>
         </section>
+        <div class="row pop-up">
+            <div class="box small-6 large-centered">
+                <a href="#" class="close-button">&#10006;</a>
+                <div id="partie_centrale_popup">
+                    <h2>FELICITATIONS !</h2>
+                    <p>
+                        Vous avez été nommé Administrateur du Salon 0485 par XX-XXXXXXXXX.
+                    </p>
+                    <form action="" method="post">
+                        <button type="submit">C'est noté</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
