--- a/MaquetteHTML/chat_admin.html
+++ b/MaquetteHTML/chat_admin.html
@@ -8,7 +8,8 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style_chat_admin.css" />
         <link rel="stylesheet" href="css/style_pop-up.css" />
-        <link rel="icon" type="image/png" href="images/favicon.png" />   
+        <link rel="icon" type="image/png" href="images/favicon.png" />  
+        <script src="js/jquery-3.2.1.js"></script>
         <script src="js/script_pop-up.js" type="text/javascript"></script> 
     </head>
     <body>
