--- a/MaquetteHTML/accueil_connecte.html
+++ b/MaquetteHTML/accueil_connecte.html
@@ -71,7 +71,7 @@ and open the template in the editor.
                 </table>
             </div>
         </div>
-        <div class="row pop-up">
+        <div class="row pop-up big-popup">
             <div class="box small-6 large-centered">
                 <a href="#" class="close-button">&#10006;</a>
                 <div id="partie_centrale_popup">
