--- a/MaquetteHTML/accueil_nonconnecte.html
+++ b/MaquetteHTML/accueil_nonconnecte.html
@@ -65,7 +65,7 @@ and open the template in the editor.
         </div>
         
         
-        <div class="row pop-up">
+        <div class="row pop-up big-popup">
             <div class="box small-6 large-centered">
                 <a href="#" class="close-button">&#10006;</a>
                 <div id="partie_centrale_popup">
