--- a/MaquetteHTML/chat_admin.html
+++ b/MaquetteHTML/chat_admin.html
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </section>
-        <div class="row pop-up">
+        <div class="row pop-up little-popup">
             <div class="box small-6 large-centered">
                 <a href="#" class="close-button">&#10006;</a>
                 <div id="partie_centrale_popup">
