--- a/MaquetteHTML/chat_nonconnecte.html
+++ b/MaquetteHTML/chat_nonconnecte.html
@@ -7,12 +7,15 @@
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"> 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <link rel="stylesheet" href="css/style_chat_nonconnecte.css" />
-        <link rel="icon" type="image/png" href="images/favicon.png" />       
+        <link rel="stylesheet" href="css/style_pop-up.css" />
+        <link rel="icon" type="image/png" href="images/favicon.png" />  
+        <script src="js/jquery-3.2.1.js"></script>
+        <script src="js/script_pop-up.js" type="text/javascript"></script> 
     </head>
     <body>
         <aside id="aside">
             <img id="logo" alt="logo" src="images/favicon.png"/>
-            <div id="salon">Salon n°1234</div>
+            <div id="salon" class='bouton-cache'>Salon n°1234</div>
             <div id="participants">Participants</div>
             <ul id="listeParticipants">
                 <li>Claude</li>
@@ -74,5 +77,19 @@
                 </div>
             </div>
         </section>
+        <div class="row pop-up little-popup" id='popup-promotion'>
+            <div class="box small-6 large-centered">
+                <a href="#" class="close-button">&#10006;</a>
+                <div id="partie_centrale_popup">
+                    <h2>FELICITATIONS !</h2>
+                    <p>
+                        Vous avez été nommé Administrateur du Salon 0485 par XX-XXXXXXXXX.
+                    </p>
+                    <form action="" method="post">
+                        <button type="submit">C'est noté</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
