--- a/MaquetteHTML/chat_admin.html
+++ b/MaquetteHTML/chat_admin.html
@@ -112,5 +112,20 @@
                 </div>
             </div>
         </div>
+        <div class="row pop-up little-popup" id='popup-ban'>
+            <div class="box small-6 large-centered">
+                <a href="#" class="close-button">&#10006;</a>
+                <div id="partie_centrale_popup">
+                    <h2>ATTENTION !</h2>
+                    <p>
+                        Voulez-vous vraiment ejecter l'utilisation XXXXX ?
+                    </p>
+                    <form action="" method="post">
+                        <button type="submit">Encore une chance !</button>
+                        <button type="submit">Oui !</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
