Resize image + new style chat

--- a/MaquetteHTML/chat_admin.html
+++ b/MaquetteHTML/chat_admin.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <aside id="aside">
-            <img id="logo" alt="logo" src="images/favicon.png"/>
+            <img id="logo" alt="logo" src="images/logo3.png"/>
             <div id="salon">Salon n°1234</div>
             <div id="participants">Participants</div>
             <ul id="listeParticipants">
@@ -51,9 +51,11 @@
                         <input type="range" min="0" max="100" value="50"/>
                     </div>
                 </div>
-                <div class="col-md-4 camera">            
-                    <span class="banCross"><i class="fa fa-times"></i></span>
-                    <span class="promoteIcon"><i class="fa fa-flag"></i></span>
+                <div class="col-md-4 camera">  
+                    <div id="grp_button">
+                        <span class="banCross"><i class="fa fa-times"></i></span>
+                        <span class="promoteIcon"><i class="fa fa-flag"></i></span>
+                    </div>
                     <img alt="camera 1" src="images/avatar.png">
                     <div class="volume">
                         <input type="range" min="0" max="100" value="50"/>
