--- a/MaquetteHTML/chat_nonconnecte.html
+++ b/MaquetteHTML/chat_nonconnecte.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <aside id="aside">
-            <img id="logo" alt="logo" src="images/favicon.png"/>
+            <img id="logo" alt="logo" src="images/logo3.png"/>
             <div id="salon" class='bouton-cache'>Salon n°1234</div>
             <div id="participants">Participants</div>
             <ul id="listeParticipants">
