--- a/MaquetteHTML/accueil_connecte.html
+++ b/MaquetteHTML/accueil_connecte.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Accueil - Skype</title>
+        <title>Accueil - SeeU</title>
         <meta charset="windows-1252">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -17,6 +17,7 @@ and open the template in the editor.
 	<script src="bootstrap/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style_pop-up.css">
         <script src="js/script_pop-up.js" type="text/javascript"></script> 
+                <link rel="icon" type="image/png" href="images/favicon.png" />  
 
 
          <link rel="stylesheet" type="text/css" href="css/style_accueil_nonconnecte.css">
