--- a/MaquetteHTML/accueil_nonconnecte.html
+++ b/MaquetteHTML/accueil_nonconnecte.html
@@ -15,6 +15,8 @@ and open the template in the editor.
 	<script src="bootstrap/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style_pop-up.css">
         <script src="js/script_pop-up.js" type="text/javascript"></script> 
+                <link rel="icon" type="image/png" href="images/favicon.png" />  
+
 
 
          <link rel="stylesheet" type="text/css" href="css/style_accueil_nonconnecte.css">
